--- a/Styles-Wide.css
+++ b/Styles-Wide.css
@@ -22,7 +22,7 @@ header {
     cursor: pointer;
 }
 
-.button-header {
+button {
     background: #6FBF44;
     border: 1px solid #4CB538;
     border-radius: 6px;
@@ -36,7 +36,7 @@ header {
     cursor: pointer;
 }
 
-.image-logo {
+.imagem {
     width: 595.18px;
     height: 500px;
     margin-left: 121px;
@@ -44,7 +44,7 @@ header {
     margin-top: 163px;
 }
 
-section {
+.container {
     display: inline-block;
     margin-left: 84.98px;
 }
@@ -59,7 +59,7 @@ h1 {
     margin-top: 273px;
 }
 
-#p1 {
+p {
     font-weight: 400;
     font-size: 18px;
     line-height: 33px;
@@ -70,7 +70,7 @@ h1 {
     width: 493px;
 }
 
-.link-learn-more {
+a {
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
